feat: 语音转文字前后端

--- a/使用指南.md
+++ b/使用指南.md
@@ -16,20 +16,32 @@ pip install -r requirements.txt
 
 #### 方法一：一键启动（推荐）
 
+**Windows批处理脚本（最简单）：**
 ```bash
-python start_frontend.py
+start_asr_system.bat
+```
+
+**PowerShell脚本：**
+```powershell
+.\start_asr_system.ps1
+```
+
+**Python脚本：**
+```bash
+python start_asr_system.py
 ```
 
 这将自动：
-- ✅ 检查并安装依赖
+- ✅ 激活虚拟环境
 - 🚀 启动WebSocket服务器
+- 🎤 启动ASR语音识别服务
 - 🌐 打开前端页面
 
 #### 方法二：分步启动
 
-**步骤1：启动ASR程序**
+**步骤1：激活虚拟环境**
 ```bash
-python src/asr/streaming_paraformer.py
+micromamba activate ./venv
 ```
 
 **步骤2：启动WebSocket服务器**
@@ -37,12 +49,23 @@ python src/asr/streaming_paraformer.py
 python src/websocket_server.py
 ```
 
-**步骤3：打开前端页面**
+**步骤3：启动ASR程序**
+```bash
+python src/asr/streaming_paraformer.py
+```
+
+**步骤4：打开前端页面**
 - 双击打开 `frontend/index.html`
 - 或在浏览器中打开该文件
 
 ### 3. 测试系统
 
+#### 完整系统测试
+```bash
+python test_integrated_system.py
+```
+
+#### 单独测试前端显示
 如果想测试前端显示效果而不启动ASR程序：
 
 ```bash
