feat: 优化会议总结效果

--- a/docs/会议总结功能说明.md
+++ b/docs/会议总结功能说明.md
@@ -6,16 +6,18 @@
 
 ## 主要特性
 
-### 🎯 三种总结模式
+### 🎯 四种处理模式
 
 1. **简要总结** - 提取关键要点和重要决定
 2. **详细总结** - 完整分析会议内容和讨论过程
 3. **行动项总结** - 专注于待办事项和跟进任务
+4. **优化语音识别文本** - 修正ASR识别错误，提升文本准确性
 
 ### 🚀 核心功能
 
 - **一键总结**: 点击"📝 总结会议"按钮即可启动
 - **智能分析**: 基于Google Gemini AI模型进行内容分析
+- **文本优化**: 专门修正ASR识别错误，提升文本质量
 - **多格式输出**: 支持保存为文本文件和复制到剪贴板
 - **实时处理**: 异步处理，不影响语音转文字功能
 - **美观界面**: 现代化弹窗设计，支持响应式布局
@@ -38,6 +40,57 @@
 - `Ctrl + S`: 保存文本
 - `Ctrl + R`: 重新连接
 - `ESC`: 关闭弹窗
+
+## 🔧 语音识别文本优化功能
+
+### 功能定位
+
+专门针对ASR（语音转文字）识别准确率不足的问题，利用大语言模型的语境理解能力，识别并修正语音识别中的常见错误。
+
+### 优化范围
+
+1. **同音字错误修正**
+   - 在/再、的/得、做/作、那/哪、因为/应为
+   - 根据上下文语境选择正确用字
+
+2. **标点符号补充**
+   - 添加缺失的逗号、句号、问号、感叹号
+   - 优化语句断句，提升可读性
+
+3. **语法错误修正**
+   - 修正语序错误和不通顺表达
+   - 补充缺失的助词和连接词
+
+4. **格式保持**
+   - 维持原始时间戳格式：[HH:MM:SS]
+   - 保持会议记录的结构完整性
+
+### 技术特点
+
+- **语境理解**: 基于上下文进行智能修正
+- **保真性**: 确保原意不变，只进行必要修正
+- **专业术语**: 智能识别并保持专业词汇
+- **批量处理**: 一次性处理整个会议记录
+
+### 输出格式
+
+```markdown
+## 🔧 优化后的会议记录
+
+### 📝 修正说明
+- 主要修正了：同音字错误、标点符号、语法问题
+- 修正条数：约15处
+
+### 📋 优化后文本
+[09:00:15] 今天我们来开会讨论新项目的开发计划。
+[09:01:22] 张经理说："我们需要在下个月底前完成产品原型设计。"
+...
+
+### ⚠️ 注意事项
+- 所有修正都基于上下文语境进行
+- 如有不确定的专业术语，已保持原样
+- 建议人工复核重要内容的准确性
+```
 
 ## 技术实现
 
@@ -111,6 +164,14 @@ copySummary()           // 复制到剪贴板
 - **主要操作**: 蓝色渐变
 - **次要操作**: 灰色渐变
 - **悬停效果**: 阴影和变换动画
+
+### UI优化特点
+
+- **统一风格**: 四种模式使用相同的视觉风格，无特殊颜色区分
+- **简洁文本**: 选项描述简洁明了，易于理解
+- **智能提示**: 根据选择的模式显示相应的加载文本
+- **动态按钮**: 保存按钮文本根据模式自动调整
+- **一致体验**: 所有功能保持相同的交互模式
 
 ## 文件结构
 
